--- a/TDD/todo.txt
+++ b/TDD/todo.txt
@@ -3,10 +3,12 @@
 ・数字以外が渡されたらエラー
 
 うるう年判定のテスト
-・うるう年ならtrue
-・うるう年でないならfalse
+・4で割り切れなかったらfalse
+・100で割り切れたらfalse
+・残りはtrue
 
 和暦作成のテスト
 ・正常な年なら和暦の作成ができる
-・数字でないなどの異常な入力ならエラー
-・未来などの指定範囲外の年を入力するとエラー
+　・2年～
+　・元年
+・範囲外ならエラー
